# linux-on-litex-vexriscv

./: json2dts.py  make.py  rust.py
buildroot/board/litex_vexriscv/: linux.config
buildroot/configs/: litex_vexriscv_defconfig
litex/: Cargo.toml  Makefile  README.md
litex/src/: main.rs
rustlib/: Cargo.toml  Makefile  my_header.h  test.c
rustlib/src/: lib.rs
