[package]
name = "litex"
version = "0.1.0"
authors = ["Tom Vijlbrief <tvijlbrief@gmail.com>"]
edition = "2018"

[lib]
name = "mylib"
crate_type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.5.1"
cty = "0.2"
